# goquest_videofy_minimal

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
api/: Dockerfile  __init__.py  api.py  asset_analysis.py  config_resolver.py  factory.py  hotspot_worker.py  image_generation_service.py  llm_service.py  pipeline.py  project_store.py  schemas.py  settings.py  tts_service.py
brands/: default.json  default.md
cms/: .gitignore  Dockerfile  README.md  eslint.config.js  next.config.mjs  package.json  tsconfig.json
cms/src/: api.ts  instrumentation.ts
cms/src/actions/: configActions.ts  logAIData.ts
fetchers/: README.md
fetchers/_template/: fetcher.json  fetcher.py
fetchers/ap/: fetcher.json  fetcher.py
fetchers/reuters/: fetcher.json  fetcher.py
fetchers/web/: fetcher.json  fetcher.py
intro_outro_wipes/: intro-16-9.webm  intro.webm  outro-16-9.webm  outro.webm
intro_outro_wipes/wipes/: wipe-landscape.webm  wipe-portrait.webm
player/: eslint.config.js  package.json  tsconfig.json
player/src/: ArticlesSeries.tsx  Player.tsx  RemotionRoot.tsx  global.css  index.ts  remotion.config.ts  testdata.json
projects/.project-structure/: generation.json
tests/: test_api_projects.py  test_config_resolver.py  test_image_generation_service.py  test_pipeline_generate.py  test_pipeline_process_voice.py  test_project_store.py  test_tts_service.py
types/: package.json  tsconfig.json
types/src/: config.types.ts  constants.types.ts  index.ts  manuscript.types.ts  process.types.ts
(+80 files in other folders)
